# sentinel

./: .gitignore  CONTRACTS.md  Cargo.toml  INTEGRATION_REPORT.md  LICENSE  Philosophy_and_design_rationale.md  README.md  SCENARIOS.md  SENTINEL_STRESS_TEST.md  Sentinel_Extension_CLUI_WS.md  Sentinel_Services_CLI.md  sentinel.toml  sentinel_narration_script.md  sentinel_test_results.json
examples/sentinel/: bad_agent_demo.py  claude_api_loop.py  langchain_agent.py  pokeredge_coach_ws.js
robot/: mock_deterministic_layer.py  sgc_deploy.py  sgc_ui.html
sentinel-controls/: Cargo.toml
sentinel-controls/src/: audit.rs  capability.rs  controller.rs  enforcer.rs  legionnaire.rs  lib.rs  notify.rs  observer.rs  process.rs  profiles.rs  socket.rs  util.rs  webhook.rs
sentinel-controls/tests/: sentinel_legionnaire.rs  sentinel_observer.rs
sentinel-core/: Cargo.toml
sentinel-core/examples/: gen_audit_fixture.rs
sentinel-core/src/: audit.rs  config.rs  error.rs  event_bus.rs  heartbeat.rs  lib.rs  logger.rs  main.rs  sha256.rs  transport.rs  types.rs  websocket.rs
sentinel-core/src/ebpf/: auth.rs  interceptor.rs  mod.rs  programs.rs
sentinel-core/src/transport/: factory.rs
sentinel-core/tests/: sentinel_audit.rs  sentinel_auth.rs  sentinel_interception.rs  sentinel_transport.rs
sentinel-devlog/: README.md  index.js  package-lock.json  package.json
sentinel-devlog/lib/: detail.js  export.js  loader.js  search.js  session.js  suite.js
sentinel-keygen/: Cargo.toml
sentinel-keygen/src/: artifacts.rs  cli.rs  commands.rs  crypto.rs  main.rs
sentinel-keygen/tests/: sentinel_keygen.rs
sentinel-py/: Cargo.toml  pyproject.toml
sentinel-py/sentinel/: __init__.py
sentinel-py/src/: lib.rs
sentinel-py/tests/: test_v3_bindings.py
sentinel-py/tests/fixtures/: clean_chain.ndjson  tampered_chain.ndjson
sentinel-signals/: Cargo.toml
sentinel-signals/src/: detectors.rs  engine.rs  lib.rs
sentinel-types/: Cargo.toml
sentinel-types/src/: lib.rs
sentinel-ui/: Cargo.toml
sentinel-ui/src/: app.rs  main.rs  net.rs  ui.rs
sentinel_py/: __init__.py  _client.py  _types.py  watch.py
tests/: DETECTOR_GROUND_TRUTH.md  README.md  harness.py  test_prompts.py
tests/sentinel/: test_client.py
