[package]
name = "sentinel-controls"
version = "0.1.0"
edition = "2021"
description = "Response controls for agent degradation — tiered intervention from pause to termination"

[dependencies]
sentinel-types = { path = "../sentinel-types" }
libc = "0.2"
# Async runtime — used only by notify::TelegramNotifier::notify_and_hold for the
# hold timeout. The rest of the crate is synchronous.
tokio = { version = "1", features = ["time", "rt", "macros"] }
