[package]
name = "sentinel-py"
version = "0.1.0"
edition = "2021"
description = "PyO3 bindings for Sentinel agent oversight — wraps sentinel-core via sentinel-types"

[lib]
name = "_sentinel_core"
crate-type = ["cdylib"]

[dependencies]
sentinel-types = { path = "../sentinel-types", features = ["python"] }
sentinel-core = { path = "../sentinel-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Synchronous WebSocket client for emit_output, which targets the daemon's
# WebSocket transport (ws://127.0.0.1:7777) rather than the Unix socket.
# Version pinned to match the workspace's tokio-tungstenite (0.24).
tungstenite = "0.24"

# sentinel-py is built as a standalone Python extension module by maturin, not as
# a member of the root cargo workspace: an `extension-module` cdylib must not be
# pulled into `cargo build --workspace`, where it would fail to link libpython.
# The empty workspace table makes this crate its own workspace root so plain
# `cargo check` / `cargo build` work here without disturbing the main workspace.
[workspace]
