[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sentinel-py"
version = "0.1.0"
description = "Python bindings for Sentinel agent oversight — wraps sentinel-core"
requires-python = ">=3.12"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "sentinel._sentinel_core"
