[package]
name = "sentinel-types"
version = "0.1.0"
edition = "2021"
description = "Shared types for the Sentinel agent oversight system"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
python = ["pyo3"]
