[package]
name = "sentinel-ui"
version = "1.0.0"
edition = "2021"
description = "Sentinel terminal dashboard — live agent oversight over WebSocket"

[[bin]]
name = "sentinel-ui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
